--- a/templates/surveys/user/thanks.html
+++ b/templates/surveys/user/thanks.html
@@ -4,13 +4,12 @@
 {% block content %}
 <div class="container py-4">
   <h2>¡Gracias!</h2>
-  <p>Hemos recibido tu respuesta para “{{ survey.title }}”.</p>
   {% if survey.auto_message %}
   <div class="mt-3">
     {{ survey.auto_message|linebreaksbr }}
-  </div>
+  </div></p>
   {% endif %}
-
+  <p>Hemos recibido tu respuesta para “{{ survey.title }}”.</p>
 
   <a id="btn-back"
      class="btn btn-primary"
