solo cambie respuestas por respuesta

--- a/templates/surveys/admin/survey_detail.html
+++ b/templates/surveys/admin/survey_detail.html
@@ -73,12 +73,11 @@
               Ver respuestas
             </button>
             <div id="answers-{{ q.qid }}" class="collapse mt-3">
-              <h6 class="mb-2">Respuestas</h6>
               <div class="table-responsive">
                 <table class="table table-sm align-middle">
                   <thead>
                     <tr>
-                      <th style="width:70%">Respuesta</th>
+                      <th style="width:70%">Respuestas</th>
                       <th class="text-end">Veces</th>
                     </tr>
                   </thead>
