--- a/templates/surveys/user/survey_view_user.html
+++ b/templates/surveys/user/survey_view_user.html
@@ -81,23 +81,23 @@
                     {% else %}
                       <div class="form-check mb-1">
                         <input class="form-check-input" type="radio" name="q_{{ q.id }}" id="q{{ q.id }}_0" value="0">
-                        <label class="form-check-label" for="q{{ q.id }}_0">Muy positivo</label>
+                        <label class="form-check-label" for="q{{ q.id }}_0">Totalmente de acuerdo</label>
                       </div>
                       <div class="form-check mb-1">
                         <input class="form-check-input" type="radio" name="q_{{ q.id }}" id="q{{ q.id }}_1" value="1">
-                        <label class="form-check-label" for="q{{ q.id }}_1">Positivo</label>
+                        <label class="form-check-label" for="q{{ q.id }}_1">De acuerdo</label>
                       </div>
                       <div class="form-check mb-1">
                         <input class="form-check-input" type="radio" name="q_{{ q.id }}" id="q{{ q.id }}_2" value="2">
-                        <label class="form-check-label" for="q{{ q.id }}_2">Neutral</label>
+                        <label class="form-check-label" for="q{{ q.id }}_2">Ni de acuerdo ni en desacuerdo</label>
                       </div>
                       <div class="form-check mb-1">
                         <input class="form-check-input" type="radio" name="q_{{ q.id }}" id="q{{ q.id }}_3" value="3">
-                        <label class="form-check-label" for="q{{ q.id }}_3">Negativo</label>
+                        <label class="form-check-label" for="q{{ q.id }}_3">En desacuerdo</label>
                       </div>
                       <div class="form-check mb-1">
                         <input class="form-check-input" type="radio" name="q_{{ q.id }}" id="q{{ q.id }}_4" value="4">
-                        <label class="form-check-label" for="q{{ q.id }}_4">Muy Negativo</label>
+                        <label class="form-check-label" for="q{{ q.id }}_4">Totalmente en desacuerdo</label>
                       </div>
                     {% endif %}
 
