--- a/templates/forms_requests/user/request_form_user.html
+++ b/templates/forms_requests/user/request_form_user.html
@@ -29,7 +29,7 @@
             <div class="form-item mb-3">
                 <i class="form-icon bi bi-file-earmark-text-fill"></i>
                 <div class="form-name">Constancia laboral
-                    <p style="font-size: 0.7rem;">En caso de requerir sello o datos adicionales favor de pasar a Capital Humano</p>
+                    <p style="font-size: 0.7rem;">En caso de requerir datos adicionales favor de pasar a Capital Humano</p>
                 </div>
                 <div class="form-actions">
                     <a href="{% url 'constancia_laboral' %}" target="_blank" class="btn btn-outline-primary">Visualizar</a>
@@ -39,7 +39,7 @@
             <div class="form-item mb-3">
                 <i class="form-icon bi bi-file-earmark-text-fill"></i>
                 <div class="form-name">Constancia especial
-                    <p style="font-size: 0.7rem;">En caso de requerir sello o datos adicionales favor de pasar a Capital Humano</p>
+                    <p style="font-size: 0.7rem;">En caso de requerir datos adicionales favor de pasar a Capital Humano</p>
                 </div>
                 <div class="form-actions">
                     <a href="{% url 'constancia_especial' %}" target="_blank" class="btn btn-outline-primary">Visualizar</a>
