quitamos el avance de preguntas y "agregamos un modulo de monitoreo"

--- a/templates/surveys/admin/survey_new.html
+++ b/templates/surveys/admin/survey_new.html
@@ -312,8 +312,8 @@
             <label class="form-check-label" for="qeRequired">Obligatoria</label>
           </div>
           <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" id="qeBranch" disabled>
-            <label class="form-check-label" for="qeBranch">Ir a la sección según la respuesta</label>
+            <input class="form-check-input" type="checkbox" id="qeBranch" disabled style="display: none;">
+            <label class="form-check-label" for="qeBranch" style="display: none;">Ir a la sección según la respuesta</label>
           </div>
         </div>
         <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancelar</button>
