--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -20,6 +20,11 @@
 
             {% if user.is_superuser %}
                 <li class="sidebar-item active">
+                    <a class="sidebar-link" href="">
+                        <i class="fa-solid fa-id-card"></i><span class="align-middle">Monitoreo</span>
+                    </a>
+                </li>
+                <li class="sidebar-item active">
                     <a class="sidebar-link" href="{% url 'user_dashboard' %}">
                         <i class="fa-solid fa-user"></i></i><span class="align-middle">Usuarios</span>
                     </a>
