--- a/templates/surveys/user/survey_dashboard_user.html
+++ b/templates/surveys/user/survey_dashboard_user.html
@@ -4,11 +4,10 @@
 <link rel="stylesheet" href="{% static 'css/survey.css' %}">
 {% endblock %}
 {% block page_title %}Panel de Encuestas{% endblock %}
-{% block title %}Encuestas{% endblock %}
 
 {% block content %}
+<h1>Encuestas</h1>
 <div class="surveys-page">
-  <div class="surveys-header"><h1>Encuestas</h1></div>
 
   <div class="surveys-search">
     <input id="surveySearchInput" type="text" placeholder="Buscar encuestas" autocomplete="off">
